css/main.css
/* ... */
.row.MainContent::-webkit-scrollbar{
    display: none;
}

@media (max-width: 991px){
    .row.MainContent{
        height: calc(100% - 86px);
    }

    header{
        height: 43px!important;
    }

    .row.Footer{
        height: 43px!important;
    }

    .nav-item button{
        height: 43px;
        line-height: 27px;

    }
}

html,body{ /*-- Sorry for this bad practice :(
                I'm still a beginner and CSS can be confusing
                So I went to the easiest solution*/

    height: 100%;
    padding:0;
    margin:0;
}

body{
    background-color: lightblue;
}

.row.Footer{
    /*width: 100%;*/
    position: relative;
    bottom: 0;
    background-color: lightgreen;
    height: 70px;
}




/*Content Settings*/
.MainContent .contentBlock{
    width: 100%; /*I will maybe regret this someday*/
                 /*Later will make padding smaller and then disappear, on smaller screens*/
    padding-top: 60px;
    padding-bottom: 60px;
    padding-left: 50px;
    padding-right: 50px;
    height: 100%;
}

#teste{ /* teste */
    background-color: darkgreen;
    padding-right: 100%;
    padding-left:100px;

}

.titleWithLine{
    background-color: gold;
    display: flex;
    align-items: center;

}

.titleWithLine h1.titleWithLine{
    background-color: darkgreen;
    white-space: nowrap; /* take care since this might cause problems on devices where title would be way too big(even though thats very unlikely since the website is responsive to screen size) */
    margin-bottom: 0px; /* this is to remove the default margin that comes with h1, so the '.titleLine' can be centered properly according to the text, but [...] */
}

.titleWithLine div.titleLine{
    width: 100%;
    font-size:2px;
}

.titleWithLine div.titleLine span.titleLine{
    padding-left: calc(100% - 50px);
    margin-left: 50px;
    background-color: black;

}

.squareWrapper .row{
    height: max-content;
}

.square{
    display: flex;
    flex-direction: column;
    border: 1px solid #21252a;
    width: 31.33333333%;
    text-align: center;
    padding-top: 40px;
    padding-bottom: 40px;
}

.square:not(:last-child){
    margin-right: 3%;
}
.square i{
    margin-bottom: 5px;
    font-size: 24px;
}

@media (max-width: 767px) {
    .square{
        width: 100%;
        margin-bottom: 12px;
    }
}



.ContentByRows{
background-color: saddlebrown;
height: 100%;
}


/* hide scrollbar but allow scrolling */
.ContentByRows {
    -ms-overflow-style: none; /* for Internet Explorer, Edge */
    scrollbar-width: none; /* for Firefox */
    overflow-y: scroll;
}

.ContentByRows::-webkit-scrollbar {
    display: none; /* for Chrome, Safari, and Opera */
}


.svg#circle1, .svg#circle2{
    display:flex;
    width: min-content;
    justify-content: center;
    align-items:center;
    min-height: 200px;
}

.svg#circle1 h6, .svg#circle2 h6{
    padding-top:7px;
    font-family: 'Montserrat', sans-serif;
}

@media (min-width: 768px){
    .ContentByRows .col-6{
        min-width: 334px;
        max-width: 50%;
    }

    .ContentByRows .col-6.left{
         padding-right: 2%;
     }

    .ContentByRows .col-6.right{
        padding-left: 2%;
    }
}
@media (max-width: 768px){
    .ContentByRows .col-6{
        min-width: 100%!important;
        max-width: none!important;
    }

    .ContentByRows .col-6.left{
        padding-right: 0%!important;
    }

    .ContentByRows .col-6.right{
        padding-left: 0%!important;
    }

    .col-6.right .svg{
        min-height: 240px!important;
    }
}

@media (max-width: 1494px){
    .breakMargin{
        margin-bottom: 0!important;
    }
}

@media (min-width: 1320px) and (max-width: 1494px){
    .col-6.left, .col-6.right{
        width: 100%;
        max-width: 100%;
    }
}

.ContentByRows .spaced-span1{ /*                      - Care, before it was: .ContentByRows .col-6.right .spaced-span1; but i changed it       */
    display: flex;
    align-items: start;
}

.ContentByRows .spaced-span1 span.first{
    min-width: 120px;
    display: inline-block;
    font-weight:700;
}

.ContentByRows .spaced-span1 span.second{
    width: calc(100% - 100px - 22.25px);
    display: inline-block;
}

.ContentByRows .spanList{
    display: flex;
    align-items: start;
}

.ContentByRows .spanList span.first{
    min-width: 25px;
    margin-left: 3.5px;
}




.contentBlock{
    display: flex;
    align-items: center;
    justify-content: center;
}


/* -------------------------------------------------HOME------------------------------------------------------------- */
.tab-pane#home, .contentHome{
    height: 100%;

}

.contentHome .row.row1{
    background-color: red;
    height: 100%;
    justify-content: center;
    text-align: center;
    align-items: center;


}

.contentHome .col-12.outsideColumn{
    display: flex;
    background-color: saddlebrown;
    justify-content: center;

    height: 100%;/*                         ALTERAR MAIS TARDE*/


}

.contentHome article{
    display: flex;
    width: 100%; /*                  ALTERAR MAIS TARDE */
    background-color: bisque;
    align-items: center;
    justify-content: center;
}

/*
.contentHome article .contentBlock{
    display: block;
    flex-direction: column;
}*/

/*@media (min-width: 576px){
    .row.\#maincontent{}
}*/

/* -------------------------------------------------ABOUT------------------------------------------------------------ */
.tab-pane#about, .contentAbout{
    height: 100%;

}

.contentAbout .row.row1{
    background-color: red;
    height: 100%;
    justify-content: center;
    text-align: left;
    align-items: center;


}

.contentAbout .col-12.outsideColumn{
    display: flex;
    background-color: saddlebrown;
    justify-content: center;
    height: 100%;/*                         ALTERAR MAIS TARDE*/


}

.contentAbout article{
    display: flex;
    width: 100%; /*                  ALTERAR MAIS TARDE */
    background-color: bisque;
    align-items: start;
    justify-content: left;


}
/* ... */

